Slight Optimisations - Create a SkullCache system to cache skin texture data on start - Switch to OfflinePlayer from GameProfile - Update plugin.yml